@@ -28,13 +28,7 @@
 
 #define seL4_PageBits        12 /* 4K */
 #define seL4_SlotBits         4
-#if CONFIG_XSAVE_SIZE > 576 || (CONFIG_XSAVE_SIZE == 576 && defined(CONFIG_DEBUG_BUILD))
-/* If we have a larger XSAVE then we're storing AVX state
- * and will need a larger total TCB size */
 #define seL4_TCBBits         11
-#else
-#define seL4_TCBBits         10
-#endif
 #define seL4_EndpointBits     4
 #define seL4_NotificationBits 4
 
